# kalman-regression-estimation-lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: kalman_as_dynamic_regression.md  when_to_use_what.md
notebooks/: kalman_vs_regression.ipynb
src/kalman_regression_estimation_lab/: __init__.py  demos.py  kalman.py  nonlinear.py  plots.py  regression.py  simulation.py
tests/: test_estimators.py
