[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-regression-estimation-lab"
version = "0.1.0"
description = "Educational demos comparing Kalman filtering and linear regression"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "ipywidgets>=8.1",
  "jupyter>=1.0",
  "streamlit>=1.39",
  "plotly>=5.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
